Hide body overflow as a means to prevent scroll bars

--- a/page/css/style.css
+++ b/page/css/style.css
@@ -4,7 +4,9 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
+  width: 100vw;
   text-shadow: 0 0 5px #000;
+  overflow-x: hidden;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, p, span {
